src/test/ui/mismatched_types/binops.stderr
error[E0277]: the trait bound `{integer}: std::ops::Add<std::option::Option<{integer}>>` is not satisfied
  --> $DIR/binops.rs:12:5
   |
12 |     1 + Some(1);
   |     ^^^^^^^^^^^ no implementation for `{integer} + std::option::Option<{integer}>`
   |
   = help: the trait `std::ops::Add<std::option::Option<{integer}>>` is not implemented for `{integer}`

error[E0277]: the trait bound `usize: std::ops::Sub<std::option::Option<{integer}>>` is not satisfied
  --> $DIR/binops.rs:13:5
   |
13 |     2 as usize - Some(1);
   |     ^^^^^^^^^^^^^^^^^^^^ no implementation for `usize - std::option::Option<{integer}>`
   |
   = help: the trait `std::ops::Sub<std::option::Option<{integer}>>` is not implemented for `usize`

error[E0277]: the trait bound `{integer}: std::ops::Mul<()>` is not satisfied
  --> $DIR/binops.rs:14:5
   |
14 |     3 * ();
   |     ^^^^^^ no implementation for `{integer} * ()`
   |
   = help: the trait `std::ops::Mul<()>` is not implemented for `{integer}`

error[E0277]: the trait bound `{integer}: std::ops::Div<&str>` is not satisfied
  --> $DIR/binops.rs:15:5
   |
15 |     4 / "";
   |     ^^^^^^ no implementation for `{integer} / &str`
   |
   = help: the trait `std::ops::Div<&str>` is not implemented for `{integer}`

error[E0277]: the trait bound `{integer}: std::cmp::PartialEq<std::string::String>` is not satisfied
  --> $DIR/binops.rs:16:5
   |
16 |     5 < String::new();
   |     ^^^^^^^^^^^^^^^^^ can't compare `{integer}` with `std::string::String`
   |
   = help: the trait `std::cmp::PartialEq<std::string::String>` is not implemented for `{integer}`

error[E0277]: the trait bound `{integer}: std::cmp::PartialOrd<std::string::String>` is not satisfied
  --> $DIR/binops.rs:16:5
   |
16 |     5 < String::new();
   |     ^^^^^^^^^^^^^^^^^ can't compare `{integer}` with `std::string::String`
   |
   = help: the trait `std::cmp::PartialOrd<std::string::String>` is not implemented for `{integer}`

error[E0277]: the trait bound `{integer}: std::cmp::PartialEq<std::result::Result<{integer}, _>>` is not satisfied
  --> $DIR/binops.rs:17:5
   |
17 |     6 == Ok(1);
   |     ^^^^^^^^^^ can't compare `{integer}` with `std::result::Result<{integer}, _>`
   |
   = help: the trait `std::cmp::PartialEq<std::result::Result<{integer}, _>>` is not implemented for `{integer}`

error: aborting due to previous error(s)

